hphp/test/zend/good/tests/classes/autoload_011.php.expectf
In autoload: string(9) "UndefBase"

Fatal error: unknown class UndefBase in %s/autoload_011.php on line 8
